test/MC/SVE/regression-tests/negative_tests/sve-stnt1w-001.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU32CStoreNT4LSSZ
// Offset register Rm cannot be xzr
stnt1w z25.s, p3, [x4, xzr, lsl #2]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
